--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ pycparser==2.21
 Pygments==2.12.0
 python-dateutil==2.8.1
 pytz==2020.1
-pywin32==304
+pypiwin32==223
 requests==2.27.1
 six==1.15.0
 soupsieve==2.3.2.post1
